kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  labels:
    app: flask

spec:
  selector:
    app: flask

  ports:
    - name: http        # <-- This line is required
      protocol: TCP
      port: 80
      targetPort: 5000

  type: NodePort
